// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users actions create user 1`] = `
Array [
  Object {
    "type": "SUBMIT_USER_START",
  },
  Object {
    "isUpdate": false,
    "resp": Object {
      "data": Object {
        "email": "alex@gorgias.io",
        "name": "Alex",
        "role": "agent",
      },
    },
    "type": "SUBMIT_USER_SUCCESS",
  },
]
`;

exports[`users actions delete user 1`] = `
Array [
  Object {
    "type": "DELETE_USER_START",
  },
  Object {
    "resp": undefined,
    "type": "DELETE_USER_SUCCESS",
    "userId": 2,
  },
]
`;

exports[`users actions fetch current user 1`] = `
Array [
  Object {
    "type": "FETCH_CURRENT_USER_START",
  },
  Object {
    "resp": Object {
      "data": Object {
        "id": 12,
      },
    },
    "type": "FETCH_CURRENT_USER_SUCCESS",
  },
]
`;

exports[`users actions fetch user 1`] = `
Array [
  Object {
    "type": "FETCH_USER_START",
  },
  Object {
    "resp": Object {
      "data": Object {
        "id": 2,
      },
    },
    "type": "FETCH_USER_SUCCESS",
  },
]
`;

exports[`users actions fetch user history 1`] = `
Array [
  Object {
    "type": "FETCH_USER_HISTORY_START",
    "userId": 2,
  },
  Object {
    "resp": Object {
      "data": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "type": "FETCH_USER_HISTORY_SUCCESS",
    "userId": 2,
  },
]
`;

exports[`users actions fetch user history 2`] = `
Array [
  Object {
    "type": "FETCH_USER_HISTORY_START",
    "userId": 2,
  },
]
`;

exports[`users actions fetch users 1`] = `
Array [
  Object {
    "type": "FETCH_USER_LIST_START",
  },
  Object {
    "resp": Object {
      "data": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "roles": undefined,
    "type": "FETCH_USER_LIST_SUCCESS",
  },
]
`;

exports[`users actions merge users 1`] = `
Array [
  Object {
    "type": "MERGE_USERS_START",
  },
  Object {
    "resp": Object {
      "data": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "type": "MERGE_USERS_SUCCESS",
  },
]
`;

exports[`users actions merge users 2`] = `
Array [
  Object {
    "type": "MERGE_USERS_START",
  },
  Object {
    "resp": Object {
      "data": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "type": "MERGE_USERS_SUCCESS",
  },
]
`;

exports[`users actions update user 1`] = `
Array [
  Object {
    "type": "SUBMIT_USER_START",
  },
  Object {
    "isUpdate": true,
    "resp": Object {
      "data": Object {
        "email": "alex@gorgias.io",
        "id": 2,
        "name": "Alex",
        "role": "agent",
      },
    },
    "type": "SUBMIT_USER_SUCCESS",
  },
]
`;
